--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#317EFB">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Mr.Notes is an easy to use app. Mr.Notes will simply store your notes in the browser's storage. Your Notes are Private in your brower's Local Storage No one else can see your notes. Use it as a Notes app or a To-DO app. Based on Vanilla Js, Simple HTML, CSS, BOOTSTRAP. ">
-    <title>Mr.Notes - Write your notes simply in your browser | Use It as a To-do App.</title>
+        content="Ninja-notebook is an easy to use app. Ninja-Notebook will simply store your notes in the browser's storage. Your Notes are Private in your brower's Local Storage No one else can see your notes. Use it as a Notes app or a To-DO app. Based on Vanilla Js, Simple HTML, CSS, BOOTSTRAP. ">
+    <title>Ninja-Notebook - Write your notes simply in your browser | Use It as a To-do App.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/jpg" href="noteslogo.png" />
@@ -50,7 +50,7 @@
 <body>
     <nav class="navbar navbar-dark bg-info">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Mr.Notes</a>
+            <a class="navbar-brand" href="/">Ninja-Notebook</a>
             <form class="d-flex">
                 <input id="searchTxt" class="form-control me-2" type="search" placeholder="Search your notes"
                     aria-label="Search">
@@ -62,14 +62,14 @@
 
     <main>
         <div class="container my-3">
-            <h2>WELCOME TO Mr.Notes</h2>
+            <h2>WELCOME TO Ninja-Notebook</h2>
             <div class="container-fluid A">
                 <div class="card-body">
 
                     <div class="mb-3">
                         <h5 id="addt">ADD A TITLE FOR NOTE</h5>
                         <input id="addTitle" type="text" class="form-control" name="title" id="exampleFormControlInput1"
-                            placeholder="Mr.notes">
+                            placeholder="Nija-Technique-for-saving-notes">
                     </div>
 
                     <h5 class="card-title">ADD A NOTE</h5>
@@ -97,6 +97,6 @@
 
 </body>
 
-<footer class="bg-info">Copyright © 2021-2022 - MrNotes </footer>
+<footer class="bg-info">Copyright © 2021-2022 - Ninja-Notebook </footer>
 
 </html>
